<resources>
    <string name="app_name">Notes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="note_card_transition_name">note_card_%1$s</string>
    <string name="note_detail_transition_name">note_detail</string>
    <string name="add_note_fab_element">add_note_fab_element</string>
    <string name="add_note_element">add_note_element</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_confirmation">Are you sure you want to delete it?</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_dialog">Delete</string>
</resources>